Fixed yellow buttons on story cards. They were not lining up after the mailBtn component was modified to add the email modal and the JSX was wrapped in a div.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -369,6 +369,12 @@ dialog, dd, dt {
     color: black;
 }
 
+.mailBtnDiv {
+    height: 56px;
+    width: 56px;
+    display: inline-block;
+}
+
 /* Modals */
 #storyTitleModal {
     /* display: none; */
